# New-project

./: .env.example  .gitignore  DELIVERY_SUMMARY.txt  Dockerfile  EXECUTION_GUIDE.md  FIRST_CANDLE_COMPLETE.md  FIRST_CANDLE_DELIVERY.md  FIRST_CANDLE_INTEGRATION.md  FIRST_CANDLE_RULE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TRADING_DASHBOARD.md  app.py  launcher.py  patch.py  pyproject.toml  realtime_server.py  requirements.txt  serve.py  test_nse.py  trading_dashboard.py
indicators/: __init__.py  adaptive_macd.py  adjustable_ma_alternating_extremities.py  ai_channels_clustering.py  all_time_high_levels.py  bollinger_bands_breakout_oscillator.py  breaker_blocks_with_signals.py  breakouts_tests_retests.py  buyside_sellside_liquidity.py  candle_body_support_resistance.py  change_in_state_of_delivery_cisd.py  currency_strength.py  donchian_ma_bands.py  donchian_zig_zag.py  dr_idr_candles.py  dtfx_algo_zones.py  dynamic_order_blocks.py  echo_forecast.py  elliott_wave.py  extrapolated_previous_trend.py  fair_value_gap.py  fair_value_gap_absorption_indicator.py  fair_value_gaps_mitigation_oscillator.py  fibonacci_grid.py  fibonacci_progression_with_breaks.py  fibonacci_ranges_real_time.py  fibonacci_toolkit.py  fibonacci_trailing_stop.py  fvg_instantaneous_mitigation_signals.py  fvg_positioning_average.py  fvg_price_volume_graph.py  fvg_sessions.py  historical_price_projection.py  horns_pattern_identifier.py  htf_fair_value_gap.py  hull_butterfly_oscillator.py  hypertrend.py  ict_implied_fair_value_gap_ifvg.py  ict_killzones.py
(+42 files in other folders)
