[project]
name = "intraday-trade-advisor"
version = "0.1.0"
description = "Paper-trading intraday analysis, screening, risk, and backtesting prototype."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.18",
    "streamlit>=1.30",
    "yfinance>=0.2.36",
    "smartapi-python>=1.4.8",
    "pyotp>=2.9",
    "logzero>=1.7",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
